fixed issue with button alignment

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,10 @@ code {
 }
 
 .square {
-  width: 10em;
-  height: 10em;
-  
+  min-width: 10em;
+  min-height: 10em;
+  padding: 0;
+  vertical-align: top;
+  align-items: center;
+  justify-content: center;
 }
